# autobot

./: README.md
autobot/: .gitignore  Makefile  pyproject.toml  requirements.txt
autobot/autobot/: alert.py  main.py  model.py  monitor.py  simulation.py
autobot/tests/: test_monitor.py  test_simulation.py
